--- a/package.json
+++ b/package.json
@@ -1,4 +1,16 @@
 {
+  "name": "js-4-hw-12",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "start": "parcel index.html",
+    "build": "parcel build index.html",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
     "parcel-bundler": "^1.12.5"
   }
